--- a/src/main/webapp/inscription.xhtml
+++ b/src/main/webapp/inscription.xhtml
@@ -16,14 +16,36 @@
 			<html:outputText value="Prénom " />
 			<html:inputText value="#{inscription.prenom}" />
 			<br />
+			<html:outputText value="Age " />
+			<html:outputText value="#{inscription.age}" id="age"/>
+			<br />
 			<html:outputText value="Adresse Email " />
-			<html:inputText value="#{inscription.login}" />
+			<html:inputText value="#{inscription.login}"
+				validator="loginValidator" />
 			<br />
 			<html:outputText value="Mot de Passe " />
 			<html:inputSecret value="#{inscription.password}" />
 			<br />
+			<html:selectBooleanCheckbox value="#{inscription.droitImage}" /> Droit à l'image
+			<br />
+			Date de naissance : <html:inputText id="date"
+				value="#{inscription.dateDeNaissance}" size="20" required="true"
+				label="Date de naissance">
+				<core:ajax event="keyup" render="age"></core:ajax>
+				<core:convertDateTime pattern="d-M-yyyy" />
+			</html:inputText>
+			<br />
+			<html:selectOneRadio layout="pageDirection"
+				value="#{inscription.civilite}">
+				<core:selectItem itemValue="1" itemLabel="Mademoiselle" />
+				<core:selectItem itemValue="2" itemLabel="Madame" />
+				<core:selectItem itemValue="3" itemLabel="Monsieur" />
+			</html:selectOneRadio>
+
 			<html:commandButton value="S'(inscrire)"
 				action="#{inscription.validate}" />
+			<html:commandButton value="Annuler" action="CancelAction"
+				immediate="true" />
 		</html:form>
 	</core:view>
 </html:body>
