--- a/src/main/webapp/login.xhtml
+++ b/src/main/webapp/login.xhtml
@@ -18,6 +18,7 @@ xmlns:ui="http://java.sun.com/jsf/facelets"
 			<br />
 			<html:commandButton value="Connecter" action="#{loginbean.validate}"/>
 		</html:form>
+		<html:outputLink value="inscription.xhtml">Inscription</html:outputLink><br />
 	</core:view>
 </html:body>
 </html>
